--- a/stilsida.css
+++ b/stilsida.css
@@ -1,16 +1,12 @@
 body{
 	margin: 0 auto;
-	width: 1600px;
-	height: 100%;
 	background: black;
 	padding-left: 25px;
 	padding-right: 25px;
 }
 .allt{
 	height: 100%;
-	width: 1280px;
-	margin-left: 10%;
-	margin-right: 10%;
+	width: 100%;
 }
 a{
 	text-decoration: none;
@@ -29,6 +25,12 @@ a{
 	margin-top: 10px;
 	width: 300px;
 	height: 100px;
+	margin-left: -30px;
+}
+nav {
+	width: 95%;
+	float: right;
+	max-height: 100px;
 }
 nav ul {
 	width: 66%;
@@ -71,9 +73,8 @@ nav a{
 }
 section{
 	margin-top: -45.7px;
-	margin-left: -265px;
 	height: 530px;
-	width: 1736px;
+	width: 100%;
 	color: #999;
 	font-family: 'Palanquin', sans-serif;
 	overflow: hidden;
@@ -84,12 +85,12 @@ section h1{
 	margin-top: 100px;
 	font-family: 'Palanquin', sans-serif;
 	font-size: 50px;
-	margin-left: 400px;
+	margin-left: 13%;
 }
 section h3{
 	color: white;
 	font-size: 20px;
-	margin-left: 425px;
+	margin-left: 14%;
 	margin-top: -40px;
 }
 section div{
@@ -115,8 +116,13 @@ section div a div{
 95% { left: -300%; }
 100% { left: 0%; }
 }
-div#slider { overflow: hidden; }
-div#slider figure div { width: 20%; float: left; }
+div#slider { 
+	overflow: hidden; 
+}
+div#slider figure div { 
+	width: 20%; 
+	float: left; 
+}
 div#slider figure { 
   position: relative;
   width: 500%;
@@ -126,20 +132,21 @@ div#slider figure {
   font-size: 0;
   animation: 20s slidy infinite;
 }
-footer{
+figure {
+	margin: 0;
+	padding: 0;
+}
+footer {
 	height: 502px;
-	width: 1714px;
-	margin-left: -243px;
+	width: 100%;
 	margin-bottom: -11px;
 }
 .frettir {
 	float: left;
-	margin-left: 245px;
 	margin-top: 1px;
-	width: 40%;
+	width: 100%;
 	height: 500px;
 	font-family: 'Palanquin', sans-serif;
-	padding-left: 10px;
 	color: white;
 }
 .undirfrettir img{
@@ -157,8 +164,8 @@ footer{
 	color: white;
 }
 .undirfrettir{
-	float: right;
-	width: 33%;
+	float: left;
+	width: 27%;
 	height: 100%;
 }
 .undirfrettir_frettir1{
@@ -190,40 +197,33 @@ footer{
 }
 .auglysingar{
 	float: left;
-	width: 1736px;
+	width: 100%;
 	height: 200px;
 	color: white;
 	padding-top: 50px;
 	margin-top: -2px;
-	margin-left: -265px;
 }
 .insta{
-	width: 766.42px;
-	height: 500px;
+	width: 100%;
+	height: 700px;
 	float: left;
 	margin-top: -1px;
-	margin-left: 7px;
 	font-family: 'Palanquin', sans-serif;
 	background: black;
-	border-bottom: 1px solid white;
-	padding-bottom: 1px;
 }
 .insta img{
-	width: 766.42px;
-	height: 400px;
+	width: 100%;
+	height: auto;
 	float: left;
 	font-family: 'Palanquin', sans-serif;
 }
 .insta h1{
-	padding-left: 80px;
 	color: white;
 }
 .footer-logo1 {
-	margin-left: 10%;
+	margin-left: 20%;
     position: relative;
     display: block;
-    margin-right: 0.8em;
-    margin-left: 300px;
     float: left;
     width: 30%;
 }
@@ -231,7 +231,19 @@ footer{
 	margin-left: 20%;
     position: relative;
     display: block;
-    margin-right: 0.8em;
     float: left;
     width: 30%;
+}
+table {
+	width: 600px;
+	height: 1000px;
+}
+td img {
+	width: 200px;
+	height: 200px;
+	z-index: 2;
+}
+td p {
+	margin-top: -60px;
+	z-index: 3;
 }
